# ffxiv_reader

./: .gitattributes  Cargo.toml  README.md  autotranslate.json  autotranslate.json.xz
src/: act.rs  lib.rs  main.rs
src/messages/: entries.rs  mod.rs  parser.rs  types.rs
src/messages/parts/: autotranslate.rs  colored.rs  formatted.rs  icon.rs  mod.rs  multi.rs  name.rs  percentage.rs  plaintext.rs  selectable.rs
