[package]
name = "ffxiv_reader"
version = "0.1.0"
authors = ["Kyle Clemens <me@kyleclemens.com>"]

[dependencies]
byteorder = "1.0.0"
memreader = {version = "*", path = "/Users/kyleclemens/Code/Rust/Projects/memreader"}
lazy_static = "0.2"
time = "0.1"
serde = "0.8"
serde_derive = "0.8"
serde_json = "0.8"
csv = "0.15"
flate2 = "0.2"
