[package]
name = "ffxiv_reader"
version = "0.1.0"
authors = ["Kyle Clemens <me@kyleclemens.com>"]

[dependencies]
byteorder = "1.0.0"
memreader = "0.1.1"
lazy_static = "0.2"
chrono = "0.4"
time = "0.1"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
csv = "0.15"
xz2 = "0.1"

[replace]
"memreader:0.1.1" = {path = "../memreader/"}
